testsuite/tests/typecheck/should_fail/T18891a.stderr

T18891a.hs:8:4: error:
    • A newtype constructor must have a return type of form T a1 ... an
      MkN1 :: N1 -> N1
    • In the definition of data constructor ‘MkN1’
      In the newtype declaration for ‘N1’

T18891a.hs:12:3: error:
    • A newtype constructor must have a return type of form T a1 ... an
      MkN2 :: N2 -> N2
    • In the definition of data constructor ‘MkN2’
      In the newtype declaration for ‘N2’
